GRAILSPLUGINS-117: Java 1.4 compatibility
git-svn-id: https://svn.codehaus.org/grails-plugins/grails-searchable/trunk@780 832c1c66-4827-0410-8465-ccb17913cd09